--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build-lib": "(cd src/lib; emcc --bind lib.c -s USE_SDL=2 -s USE_SDL_GFX=2 -s EXPORT_ES6 --emit-tsd ./a.out.d.ts)",
+    "build": "npm run build-lib && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
