--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "fractals",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://alexbr.dev/fractals",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "build-lib": "(cd src/lib; emcc --bind lib.c -s USE_SDL=2 -s EXPORTED_FUNCTIONS=_main,_drawMandelbrotPixel,_redraw -s EXPORT_ES6 --emit-tsd ./a.out.d.ts)",
     "build": "npm run build-lib && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -23,6 +26,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
