--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "build-dev-lib": "(cd src/lib; emcc --bind lib.c -s USE_SDL=2 -s EXPORTED_FUNCTIONS=_initialiseCanvas,_renderMandelbrot,_cleanup,_saveImage -s EXPORT_ES6 --emit-tsd ./a.out.d.ts -g -sFORCE_FILESYSTEM -s EXPORTED_RUNTIME_METHODS=['FS'] -sALLOW_MEMORY_GROWTH)",
     "build": "npm run build-lib && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier . -w --no-semi"
   },
   "dependencies": {
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
