--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "build-lib": "(cd src/lib; emcc --bind lib.c -s USE_SDL=2 -s EXPORTED_FUNCTIONS=_saveImage,_generateRenderFractal,_generateSaveFractal,_initialiseGraphics,_cleanup -s EXPORT_ES6 --emit-tsd ./a.out.d.ts -O3 -sFORCE_FILESYSTEM -s EXPORTED_RUNTIME_METHODS=['FS','JSEvents'] -sALLOW_MEMORY_GROWTH)",
-    "build-dev-lib": "(cd src/lib; emcc --bind lib.c -s USE_SDL=2 -s EXPORTED_FUNCTIONS=_saveImage,_generateRenderFractal,_generateSaveFractal,_initialiseGraphics,_cleanup -s EXPORT_ES6 --emit-tsd ./a.out.d.ts -g -sFORCE_FILESYSTEM -s EXPORTED_RUNTIME_METHODS=['FS','JSEvents'] -sALLOW_MEMORY_GROWTH)",
+    "build-lib": "(cd src/libc; emcc --bind lib.c -s USE_SDL=2 -s EXPORTED_FUNCTIONS=_saveImage,_generateRenderFractal,_generateSaveFractal,_initialiseGraphics,_cleanup -s EXPORT_ES6 --emit-tsd ./a.out.d.ts -O3 -sFORCE_FILESYSTEM -s EXPORTED_RUNTIME_METHODS=['FS','JSEvents'] -sALLOW_MEMORY_GROWTH)",
+    "build-dev-lib": "(cd src/libc; emcc --bind lib.c -s USE_SDL=2 -s EXPORTED_FUNCTIONS=_saveImage,_generateRenderFractal,_generateSaveFractal,_initialiseGraphics,_cleanup -s EXPORT_ES6 --emit-tsd ./a.out.d.ts -g -sFORCE_FILESYSTEM -s EXPORTED_RUNTIME_METHODS=['FS','JSEvents'] -sALLOW_MEMORY_GROWTH)",
     "build": "npm run build-lib && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
